syntax = "proto3";

package v1;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "api/2fa/v1;v1";


service AuthSercie {
    rpc VerifyEmail(VerifyEmailRequest) returns (VerifyEmailResponse) {
        option (google.api.http) = {
            get: "v1/email/verify"
        };
    };
}

message VerifyEmailRequest {
    int64 id = 1;
    string secret_code = 2;
} 

message VerifyEmailResponse {
    bool is_verified = 1;
}

message EmailVerify {
    int64 id = 1;
    string user_id = 2;
    string email = 3;
    string secret_code = 4;
    bool is_used = 5;
    google.protobuf.Timestamp expired_at = 6;

}


message SendEmailRequest {
    string user_id = 1;
    string email = 2;
}