syntax = "proto3";

package api.user.v1;

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";


option go_package = "api/user/v1;v1";

service UserService {
	rpc CreateUser (CreateUserRequest) returns (CreateUserReply) {
		option (google.api.http) = {
			post: "v1/user"
			body: "*"
		  };
	}
	rpc UpdateUser (UpdateUserRequest) returns (UpdateUserReply);
	rpc DeleteUser (DeleteUserRequest) returns (DeleteUserReply);
	rpc GetUser (GetUserRequest) returns (GetUserReply);
	rpc ListUser (ListUserRequest) returns (ListUserReply);
}

message User {
	string username = 1;
	string email = 2;
	string avatar = 3;
	string description = 4;
    google.protobuf.Timestamp created_at = 5;
}

message CreateUserRequest {
	string username = 1;
	string email = 2;
	string password = 3;
}

message CreateUserReply {
	User user = 1;
}

message UpdateUserRequest {}
message UpdateUserReply {}

message DeleteUserRequest {}
message DeleteUserReply {}

message GetUserRequest {}
message GetUserReply {}

message ListUserRequest {}
message ListUserReply {}